--- a/01_初识vue/初识Vue.html
+++ b/01_初识vue/初识Vue.html
@@ -5,6 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <script>
+       var string='string';
+       var number=0;
+       var bool=true;
+       console.log(number || string);
+       console.log(number && string);
+       console.log(bool||number);
+       console.log(bool&& number);
+    </script>
 </head>
 <body>
     
