--- a/DOM/04_获取特殊元素.html
+++ b/DOM/04_获取特殊元素.html
@@ -9,13 +9,13 @@
 <body>
     <script>
         //1.获取Body 元素
-
+        var  bodyEle=document.body;
 
         //2.获取html 元素
+        var htmlEle = document.documentElement;    
 
 
 
-        
     </script>
 </body>
 </html>
