--- a/DOM/06_执行事件步骤.html
+++ b/DOM/06_执行事件步骤.html
@@ -11,9 +11,10 @@
 
 <script>
     var div = document.querySelector('div');
-
+    var data = new Date();
+    var h = data.getHours();
     div.onclick=function(){
-        console.log('点击');
+        console.log(data);
     }
 </script>
 
