--- a/DOM/07_操作元素之改变元素内容.html
+++ b/DOM/07_操作元素之改变元素内容.html
@@ -16,7 +16,9 @@
     var div = document.querySelector('div')
 //2.注册事件
 button.onclick = function(){
-    div.innerText = Data.now();
+    div.innerText = '2021-10-31';
+
+    
 }
 
 
