--- a/DOM/12_节点操作.html
+++ b/DOM/12_节点操作.html
@@ -46,6 +46,17 @@ var li = document.creatElement('li');
   //4.克隆节点
   // node.cloneNode(); 括号为空或者里面是false  浅拷贝  只复制标签，不复制内容
 //node.cloneNode(true);  深拷贝 复制内容
+
+
+
+//三种动态创建元素区别
+
+// innerHTML  不采用字符串，采取数组形式拼接  效率更高
+
+// createElement    创建多个元素效率稍低，但是结构清晰
+
+
+addEventListener
 </script>
 </body>
 </html>
